# DefaultWebApp

./: .dockerignore  .env.example  .gitignore  .mcp.json  BLOG.md  CLAUDE.md  Dockerfile  Jenkinsfile  README.md  dados.db  docker-compose.yml  gerar_crud.py  main.py  pyproject.toml  requirements.txt  reset_senha.py  setup_projeto.py
WebStandard/: Dockerfile  main.py
backend/: .env.example  .gitignore  CLAUDE.md  README.md  main.py  requirements.txt
data/: usuarios_seed.json
deploy/: Dockerfile  Jenkinsfile  docker-compose.yml
docs/: CHAT.md  COMPONENTES_REUTILIZAVEIS.md  CRUD.md  FORKING.md  RELATORIO_CONFORMIDADE_COMPONENTES.md  RELATORIO_USO_COMPONENTES.md  RESUMO_USO_COMPONENTES.md  USO_COMPONENTES.md  cavi_paginas_html.md  claude-code-free.md  giro_choffer_paginas_html.md  lancebet_paginas_html.md  odontox_paginas_html.md  voudebarba_paginas_html.md
dtos/: auth_dto.py  carga_dto.py  categoria_dto.py  chamado_dto.py  chamado_interacao_dto.py  chat_dto.py  configuracao_dto.py  perfil_dto.py  usuario_dto.py  validators.py
frontend/: .gitignore  README.md  index.html  package-lock.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
model/: artigo_model.py  auditoria_model.py  carga_model.py  categoria_model.py  chamado_interacao_model.py  chamado_model.py  chat_participante_model.py  chat_sala_model.py  notificacao_model.py  pagamento_model.py  usuario_logado_model.py
repo/: artigo_repo.py  auditoria_repo.py  carga_repo.py  categoria_repo.py  chamado_interacao_repo.py  chamado_repo.py  chat_mensagem_repo.py  configuracao_repo.py  indices_repo.py  (+3 more)
(+485 files in other folders)
